--- a/assets/scss/utils/_reset.scss
+++ b/assets/scss/utils/_reset.scss
@@ -23,7 +23,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
 
-  background: #fafafa;
+  background: #fff;
 
   color: #000000;
   line-height: 1.2;
